tests/files/lexer_tests/should_fail/060.cmdr
// Illegal character in variable name (ascii 27)
myvar = 27;